force-app/main/default/objects/Contract__c/fields/BillingFrequencyToAgentCharge__c.field-meta.xml
<CustomField>
    <fullName>BillingFrequencyToAgentCharge__c</fullName>
    <label>Billing Frequency to Agent(Charge)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>