force-app/main/default/objects/Contract__c/fields/BillingFrequencyToEndUserFree__c.field-meta.xml
<CustomField>
    <fullName>BillingFrequencyToEndUserFree__c</fullName>
    <label>Billing Frequency to End User(Free)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Frequency</valueSetName>
    </valueSet>
</CustomField>