force-app/main/default/objects/Contract__c/fields/BuyersAddress__c.field-meta.xml
<CustomField>
    <fullName>BuyersAddress__c</fullName>
    <label>Buyer&apos;s Address</label>
    <type>TextArea</type>
</CustomField>