force-app/main/default/objects/Contract__c/fields/ChargeFreeClassification__c.field-meta.xml
<CustomField>
    <fullName>ChargeFreeClassification__c</fullName>
    <description>The field to identify whether the end user and agency charges are free or charge</description>
    <label>Charge or Free Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ChargeFreeClassification</valueSetName>
    </valueSet>
</CustomField>