force-app/main/default/objects/Contract__c/fields/ChargeFreeEndDate__c.field-meta.xml
<CustomField>
    <fullName>ChargeFreeEndDate__c</fullName>
    <label>Charge Free End Date to End User</label>
    <type>Date</type>
</CustomField>