force-app/main/default/objects/Contract__c/fields/ChargeFreePeriodFromSupplierMonth__c.field-meta.xml
<CustomField>
    <fullName>ChargeFreePeriodFromSupplierMonth__c</fullName>
    <label>Charge Free Period From Supplier(Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>