force-app/main/default/objects/Contract__c/fields/ChargeFreePeriodMonth__c.field-meta.xml
<CustomField>
    <fullName>ChargeFreePeriodMonth__c</fullName>
    <label>Charge Free Period to End User(Month)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>