force-app/main/default/objects/Contract__c/fields/ChargeFreeStartDateFromSupplier__c.field-meta.xml
<CustomField>
    <fullName>ChargeFreeStartDateFromSupplier__c</fullName>
    <label>Charge Free Start Date From Supplier</label>
    <type>Date</type>
</CustomField>