force-app/main/default/objects/Contract__c/fields/ChargePeriodFlag__c.field-meta.xml
<CustomField>
    <fullName>ChargePeriodFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charge Period Flag</label>
    <type>Checkbox</type>
</CustomField>