force-app/main/default/objects/Contract__c/fields/CommodityDescriptionofGoodsPI__c.field-meta.xml
<CustomField>
    <fullName>CommodityDescriptionofGoodsPI__c</fullName>
    <label>Commodity Description of Goods-PI</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>