force-app/main/default/objects/Contract__c/fields/ContractNumber__c.field-meta.xml
<CustomField>
    <fullName>ContractNumber__c</fullName>
    <label>CONTRACT NUMBER</label>
    <length>100</length>
    <type>Text</type>
</CustomField>