force-app/main/default/objects/Contract__c/fields/ContractPeriodChargeFreeFromSupplier__c.field-meta.xml
<CustomField>
    <fullName>ContractPeriodChargeFreeFromSupplier__c</fullName>
    <label>Contract Period ChargeFree From Supplier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>