force-app/main/default/objects/Contract__c/fields/ContractSignedDate__c.field-meta.xml
<CustomField>
    <fullName>ContractSignedDate__c</fullName>
    <label>CONTRACT SIGNED DATE</label>
    <type>Date</type>
</CustomField>