force-app/main/default/objects/Contract__c/fields/ContractStatus__c.field-meta.xml
<CustomField>
    <fullName>ContractStatus__c</fullName>
    <label>CONTRACT STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OrderStatus</valueSetName>
    </valueSet>
</CustomField>