force-app/main/default/objects/Contract__c/fields/MonthAfterFirstBillingDate__c.field-meta.xml
<CustomField>
    <fullName>MonthAfterFirstBillingDate__c</fullName>
    <formula>MONTH(TODAY())- MONTH(FirstBillingDate__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month After First Billing Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>