force-app/main/default/objects/Contract__c/fields/NotifyPartysAddress__c.field-meta.xml
<CustomField>
    <fullName>NotifyPartysAddress__c</fullName>
    <label>Notify Party&apos;s Address</label>
    <type>TextArea</type>
</CustomField>