force-app/main/default/objects/Contract__c/fields/PICOfContractor__c.field-meta.xml
<CustomField>
    <fullName>PICOfContractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC OF CONTRACTOR</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Id</field>
            <operation>equals</operation>
            <valueField>$Source.ContractorName__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CONTRACT</relationshipLabel>
    <relationshipName>CONTRACT</relationshipName>
    <type>Lookup</type>
</CustomField>