force-app/main/default/objects/Contract__c/fields/PlanTotalAmountofSellingFCYRollup__c.field-meta.xml
<CustomField>
    <fullName>PlanTotalAmountofSellingFCYRollup__c</fullName>
    <label>Plan Total Amount of Selling(FCY)-Rollup</label>
    <summarizedField>ContractProduct__c.PlanTotalAmountofSellingFCY__c</summarizedField>
    <summaryForeignKey>ContractProduct__c.CONTRACT__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>