force-app/main/default/objects/Contract__c/fields/PortofDischarge__c.field-meta.xml
<CustomField>
    <fullName>PortofDischarge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port of Discharge</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>CONTRACT. (Port of Discharge)</relationshipLabel>
    <relationshipName>CONTRACT1</relationshipName>
    <type>Lookup</type>
</CustomField>