force-app/main/default/objects/Contract__c/fields/PortofLoading__c.field-meta.xml
<CustomField>
    <fullName>PortofLoading__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Port of Loading</label>
    <referenceTo>Port__c</referenceTo>
    <relationshipLabel>CONTRACT.</relationshipLabel>
    <relationshipName>CONTRACT</relationshipName>
    <type>Lookup</type>
</CustomField>