force-app/main/default/objects/Contract__c/fields/ProformaInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>ProformaInvoiceDate__c</fullName>
    <label>Proforma Invoice Date</label>
    <type>Date</type>
</CustomField>