force-app/main/default/objects/Contract__c/fields/ProformaInvoiceNo__c.field-meta.xml
<CustomField>
    <fullName>ProformaInvoiceNo__c</fullName>
    <label>Proforma Invoice No#</label>
    <type>TextArea</type>
</CustomField>