force-app/main/default/objects/Contract__c/fields/QuoteID__c.field-meta.xml
<CustomField>
    <fullName>QuoteID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QUOTE ID</label>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>CONTRACT</relationshipLabel>
    <relationshipName>Contract</relationshipName>
    <type>Lookup</type>
</CustomField>