force-app/main/default/objects/Contract__c/fields/ResellerAgent__c.field-meta.xml
<CustomField>
    <fullName>ResellerAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CONTRACT(RESELLER AGENT)</relationshipLabel>
    <relationshipName>ResellerAgent</relationshipName>
    <type>Lookup</type>
</CustomField>