force-app/main/default/objects/Contract__c/fields/SalesPerson__c.field-meta.xml
<CustomField>
    <fullName>SalesPerson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Person</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CONTRACT</relationshipName>
    <type>Lookup</type>
</CustomField>