force-app/main/default/objects/Contract__c/fields/TermsConditionsSales__c.field-meta.xml
<CustomField>
    <fullName>TermsConditionsSales__c</fullName>
    <label>Terms &amp; Conditions of Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TermsConditionsSales</valueSetName>
    </valueSet>
</CustomField>