force-app/main/default/objects/Contract__c/fields/TimeUnit__c.field-meta.xml
<CustomField>
    <fullName>TimeUnit__c</fullName>
    <label>Time Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TimeUnit</valueSetName>
    </valueSet>
</CustomField>