force-app/main/default/objects/Contract__c/fields/TotalAmountofSellingFCYtext__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountofSellingFCYtext__c</fullName>
    <label>Total Amount of Selling(FCY)-text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>