force-app/main/default/objects/Contract__c/fields/TotalNumberofContainerfromGoodSO__c.field-meta.xml
<CustomField>
    <fullName>TotalNumberofContainerfromGoodSO__c</fullName>
    <label>Total Number of Container(from Good S/O)</label>
    <summarizedField>SALES_ORDER__c.TotalNumberofContainer__c</summarizedField>
    <summaryForeignKey>SALES_ORDER__c.ContractID__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>