force-app/main/default/objects/Contract__c/fields/TruckFleetID__c.field-meta.xml
<CustomField>
    <fullName>TruckFleetID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRUCK &amp; FLEET ID</label>
    <referenceTo>TruckFleet__c</referenceTo>
    <relationshipLabel>CONTRACT</relationshipLabel>
    <relationshipName>CONTRACT</relationshipName>
    <type>Lookup</type>
</CustomField>