force-app/main/default/objects/Contract__c/recordTypes/BuyingClosedEnded.recordType-meta.xml
<RecordType>
    <fullName>BuyingClosedEnded</fullName>
    <active>true</active>
    <label>Buying Closed-Ended</label>
</RecordType>