force-app/main/default/objects/Contract__c/recordTypes/BuyingOpenEnded.recordType-meta.xml
<RecordType>
    <fullName>BuyingOpenEnded</fullName>
    <active>true</active>
    <label>Buying Open-Ended</label>
</RecordType>