force-app/main/default/objects/Contract__c/recordTypes/SellingClosedEnded.recordType-meta.xml
<RecordType>
    <fullName>SellingClosedEnded</fullName>
    <active>true</active>
    <label>Selling Closed-Ended</label>
</RecordType>