force-app/main/default/objects/Contract__c/recordTypes/SellingOpenEnded.recordType-meta.xml
<RecordType>
    <fullName>SellingOpenEnded</fullName>
    <active>true</active>
    <label>Selling Open-Ended</label>
</RecordType>