force-app/main/default/objects/Contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>ContractorType__c</columns>
    <columns>ContractName__c</columns>
    <columns>ContractorName__c</columns>
    <columns>ContractTerm__c</columns>
    <columns>ContractStartDate__c</columns>
    <columns>ContractEndDate__c</columns>
    <columns>BillingAddress__c</columns>
    <filterScope>Everything</filterScope>
    <label>0. All</label>
</ListView>