force-app/main/default/objects/Contract__c/listViews/ContractList.listView-meta.xml
<ListView>
    <fullName>ContractList</fullName>
    <columns>NAME</columns>
    <columns>ContractNumber__c</columns>
    <columns>Active__c</columns>
    <columns>ContractQuantity__c</columns>
    <columns>ContractAmount__c</columns>
    <columns>Currency__c</columns>
    <columns>ContractStatus__c</columns>
    <columns>ContractEndDate__c</columns>
    <columns>ContractStartDate__c</columns>
    <columns>ContractorName__c</columns>
    <columns>QuoteID__c</columns>
    <filterScope>Mine</filterScope>
    <label>Contract List</label>
</ListView>