force-app/main/default/objects/Contract__c/listViews/Selling_Contract.listView-meta.xml
<ListView>
    <fullName>Selling_Contract</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>ContractorType__c</columns>
    <columns>ContractName__c</columns>
    <columns>ContractorName__c</columns>
    <columns>ContractTerm__c</columns>
    <columns>ContractStartDate__c</columns>
    <columns>ContractEndDate__c</columns>
    <columns>BillingAddress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contract__c.SellingClosedEnded</value>
    </filters>
    <label>2. Selling Contract</label>
</ListView>